--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export",
+    "start": "next start",
+    "serve": "serve out"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3",
     "next": "^9.5.5",
     "next-images": "^1.6.0",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "reactstrap": "^8.6.0"
+  },
+  "devDependencies": {
+    "serve": "^11.3.2"
   }
 }
